# strategy-game-engine-haskell

./: .gitignore  README.md  Tarefa0_geral.hs  exemplo_gloss.hs  gloss.hs  gloss_2.hs  hpc_index.html  hpc_index_alt.html  hpc_index_exp.html  hpc_index_fun.html  runcoverage.sh  runhpc.sh  t1-feedback.tix  t1.feedback  t2-feedback.tix  t2.feedback  tarefa0.hs  tarefa1.hs  worms.cabal
50q/: 21.hs  30.hs  31  testes.hs
app/: Assets.hs  Desenhar.hs  EstadoJogo.hs  Eventos.hs  Main.hs  Mapas.hs  Menu.hs  SelecaoModo.hs  Tempo.hs  Tutorial.hs  Worms.hs
gloss-tutorial-0.1.0.0/: Gloss1.hs  Gloss2.hs  Gloss3.hs  Gloss3.hs:Zone.Identifier  Gloss4.hs  Gloss5.hs  README.md  gloss-tutorial.cabal
haddocks/: doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-G.html  doc-index-I.html  doc-index-J.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  doc-index-V.html  doc-index.html  doc-index.json  index.html
haddocks/worms/: Labs2025.html  Tarefa0_2025.html  Tarefa0_geral.html  Tarefa1.html  Tarefa2.html  Tarefa3.html  Tarefa4.html  index.html  (+20 more)
lib/: Tarefa0_2025.hs  Tarefa0_geral.hs  Tarefa1.hs  Tarefa2.hs  Tarefa3.hs  Tarefa4.hs  tarefa1.hs
test/: CheckMap.hs  DebugValidaEstado.hs  ReproduceBug.hs  Tarefa1Test.hs  Tarefa2Test.hs  Tarefa3Test.hs  Tarefa4Test.hs
worms-0.0.0.0-inplace/: Labs2025.hs.html  Tarefa0_2025.hs.html  Tarefa0_geral.hs.html  Tarefa1.hs.html
worms-0.0.0.0-inplace-t1-feedback/: Magic.hs.html  Main.hs.html
(+51 files in other folders)
